@@ -846,6 +846,10 @@ Release 2.6.0 - UNRELEASED
     schedulers about previous finished attempts of a running appliation to avoid
     expectation mismatch w.r.t transferred containers. (Jian He via vinodkv)
 
+    YARN-2824. Fixed Capacity Scheduler to not crash when some node-labels are
+    not mapped to queues by making default capacities per label to be zero.
+    (Wangda Tan via vinodkv)
+
 Release 2.5.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
